--- a/FuriganaConverter/PlaceHolders.strings
+++ b/FuriganaConverter/PlaceHolders.strings
@@ -5,5 +5,5 @@
   Created by 阿部紘明 on 2020/01/26.
   Copyright © 2020 阿部紘明. All rights reserved.
 */
-kanji="読めない漢字を下の貼り付けボタンを押して貼り付けよう！";
+kanji="漢字や文章をコピーして下の貼り付けボタンを押して貼り付けよう！";
 hiragana="ここに貼り付けた漢字のよみがなが表示されるよ！\n漢字タブに移動して読めない漢字を貼り付けよう！";
